# ROS-challenges-solutions

./: README.md
puppet_master_challenge/: CMakeLists.txt  README.md  package.xml
puppet_master_challenge/launch/: run.launch
puppet_master_challenge/src/: puppet_master.cpp
puppet_master_challenge_solution/: CMakeLists.txt  README.md  package.xml  snapcraft.yaml
puppet_master_challenge_solution/include/puppet_master_challenge_solution/: puppet_master_controller.h
puppet_master_challenge_solution/launch/: run_server.launch  run_solution.launch
puppet_master_challenge_solution/src/: puppet_master_controller.cpp
